# libsmaf-fork

./: Android.mk  configure.ac
lib/: Android.mk  Makefile.am  Makefile.eca  libsmaf.c  libsmaf.h  libsmaf.pc.in  smaf.h
tests/: Makefile.am  Makefile.eca  optee_invoke_sdp_ta.c  optee_invoke_sdp_ta.h  test_smaf.c
